# text-generation-inference

./: .codespellrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  OWNERS  README.md  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/free-up-disk-space/: action.yml
.github/actions/pre-commit/: action.yaml
.github/workflows/: build.yml  ci.yml  codeql.yml  test.yml
deployment/: README.md  deploy_model.sh
deployment/base/: deployment.yaml  kustomization.yaml  service.yaml
deployment/base/patches/: flash-attention.yaml  pt2-compile.yaml  read-only-root-filesystem.yaml  shm.yaml
deployment/base/patches/gpus/: 1-gpu.yaml  2-gpu.yaml  8-gpu.yaml  a100-80g.yaml  v100-16g.yaml
deployment/base/patches/limits/: t5-xl-v100.yaml  t5-xxl.yaml
deployment/base/patches/pvcs/: pvc.yaml
deployment/models/bloom/: kustomization.yaml
deployment/models/bloomchat-v1/: kustomization.yaml
deployment/models/bloomz/: kustomization.yaml
deployment/models/flan-t5/: kustomization.yaml
deployment/models/flan-t5-3b/: kustomization.yaml
deployment/models/flan-t5-pt2c/: kustomization.yaml
deployment/models/flan-ul2/: kustomization.yaml
deployment/models/flan-ul2-pt2c/: kustomization.yaml
deployment/models/flan-ul2-tp/: kustomization.yaml
deployment/models/gpt-neox/: kustomization.yaml
deployment/models/ibm-mpt-7b-instruct/: kustomization.yaml
deployment/models/mpt-7b/: kustomization.yaml
deployment/models/mt0/: kustomization.yaml
deployment/models/mt0-pt2c/: kustomization.yaml
deployment/models/ul2/: kustomization.yaml
integration_tests/: Makefile  pyproject.toml  sample_client.py  test_cases_bloom560m.yaml  test_cases_common.yaml  test_cases_gpt2.yaml  test_cases_mt0_ost.yaml  test_cases_mt0small.yaml  test_cases_tinyllama.yaml  test_cases_tinyllama_no_ast.yaml  test_cases_tinystarcoderpy.yaml
integration_tests/prompt_prefixes/bloom_sentiment_1/: decoder.pt
integration_tests/prompt_prefixes/mt0_sentiment_both/: decoder.pt  encoder.pt
integration_tests/prompt_prefixes/mt0_sentiment_decoder_only/: decoder.pt
integration_tests/prompt_prefixes/mt0_sentiment_encoder_only/: encoder.pt
integration_tests/prompt_prefixes/nested/path/: decoder.pt
integration_tests/prompt_prefixes/tiny_starcoder/: decoder.pt
integration_tests/prompt_prefixes/tinyllama/: decoder.pt
integration_tests/prompt_prefixes/tinyllama_peft_adapter/: adapter_model.safetensors
integration_tests/text_generation_tests/: approx.py  test_server.py
launcher/: Cargo.toml
launcher/src/: main.rs
lm-eval/: Dockerfile  Makefile  README.md  job.yaml  pyproject.toml
lm-eval/tgis_eval/: __main__.py  model.py
pb/: client.py  generate_pb2.py  generate_pb2.pyi  generate_pb2_grpc.py  generation_pb2.py  generation_pb2.pyi  generation_pb2_grpc.py
proto/: generate.proto  generation.proto
router/: Cargo.toml  build.rs
router/client/: Cargo.toml
router/client/src/: client.rs  lib.rs  sharded_client.rs
router/src/: batch_types.rs  batcher.rs  decoder.rs  grpc_server.rs  health.rs  lib.rs  main.rs  metrics.rs  queue.rs  server.rs  tokenizer.rs  tracing.rs  validation.rs
scripts/: speculative_generation_sample.py
scripts/batch_integrity_checks/: .gitignore  README.md  batching_integrity_checks.py
server/: .gitignore  Makefile  Makefile-flash-att  Makefile-flash-att-v2  Makefile-onnx  Makefile-onnx-runtime  Makefile-optimum  Makefile-transformers  README.md  pyproject.toml
server/custom_kernels/custom_kernels/: fused_attention_cuda.cu  fused_bloom_attention_cuda.cu
server/exllama_kernels/: setup.py
server/exllama_kernels/exllama_kernels/cuda_func/: q4_matrix.cu
server/exllamav2_kernels/: setup.py
server/exllamav2_kernels/exllamav2_kernels/cpp/: quantize_func.h  sampling.cpp  sampling.h
server/exllamav2_kernels/exllamav2_kernels/cuda/: cache.cu  compat_gemm.cuh  h_gemm.cu  h_gemm.cuh  pack_tensor.cu  pack_tensor.cuh  q_attn.cuh  q_gemm.cuh  q_mlp.cuh  quantize.cuh  rms_norm.cuh
server/tests/: conftest.py  test_logit_processors.py  test_prompt_cache.py  test_utils.py
server/tests/models/: test_bloom.py  test_causal_lm.py  test_seq2seq_lm.py
server/tests/utils/: test_convert.py
server/text_generation_server/: cache.py  cli.py  prompt_cache.py  server.py
server/text_generation_server/inference_engine/: __init__.py  ds_inference.py  engine.py  hf_accelerate.py  hf_custom_tp.py  hf_optimum_bt.py  hf_optimum_ort.py  hf_optimum_ov.py  hf_transformers.py  hf_transformers_ipex.py  ibm_fms.py  tgis_native.py
server/text_generation_server/models/: __init__.py  causal_lm.py  flash_causal_lm.py  flash_llama.py  flash_santacoder.py  model.py  paged_causal_lm.py  seq2seq_lm.py  types.py
server/text_generation_server/models/custom_modeling/: __init__.py  bloom_modeling.py  flash_llama_modeling.py  flash_neox_modeling.py  flash_rw_modeling.py  flash_santacoder_modeling.py  neox_modeling.py  paged_llama_modeling.py  paged_santacoder_modeling.py  t5_modeling.py
server/text_generation_server/pb/: .gitignore
server/text_generation_server/utils/: __init__.py  convert.py  dist.py  fastweight.py  flash_attn.py  hub.py  layers.py  logits_process.py  memory_characterizer.py  onnx.py  paged.py  tensor.py  termination.py  token_types.py  tokens.py  warmup.py  weights.py
server/text_generation_server/utils/gptq/: custom_autotune.py  exllama.py  exllamav2.py  marlin.py  quant_linear.py  quantize.py  shuffle.py
server/transformers_patch/: modeling_codegen.py
