[tool.poetry]
name = "text-generation-tests"
version = "0.1.0"
description = "Integration Tests for FMaaS inference Server"
authors = ["Nick Hill"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
protobuf = "^4.25.1"
grpcio-tools = "^1.59.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[tool.pytest.ini_options]
markers = [
    "model",
    "extensions",
    "shards",
    "output_special_tokens",
    "test_case_file",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

