[package]
name = "text-generation-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Dehaene"]
description = "Text Generation Launcher"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
nix = "0.27.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

