[package]
name = "text-generation-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Dehaene"]
description = "Text Generation Launcher"

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
nix = { version = "0.28.0", features = ["process", "signal"] }
serde_json = "^1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
