[tool.poetry]
name = "tgis-eval"
version = "0.1.0"
description = "lm-eval backend for tgis"
authors = ["Max de Bayser"]

[tool.poetry.dependencies]
python = ">=3.9"
grpcio-tools = "^1.62.1"
lm-eval ="^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
