[tool.poetry]
name = "text-generation-server"
version = "0.1.0"
description = "BLOOM Inference Python gRPC Server"
authors = ["Olivier Dehaene <olivier@huggingface.co>"]

[tool.poetry.scripts]
text-generation-server = 'text_generation_server.cli:app'

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
# grpc is not yet compatible with newer protobuf
protobuf = "^4.25.3"
grpcio = "^1.62.2"
grpcio-reflection = "^1.62.2"
loguru = "^0.7.2"
typer = "^0.12.3"
accelerate = { version = "0.27.2", optional = true }
bitsandbytes = { version = "^0.42.0", optional = true }
scipy = "^1.11.4"
safetensors = "^0.4.3"
sentencepiece = "^0.2.0"
datasets = { version = "^2.15.0", optional = true }
texttable = { version = "^1.7.0", optional = true }
# transformers pinned due to breakage from using `Cache` class for KV cache
transformers = "4.40.2"
# optimum pinned until transformers can be updated to avoid
#    cannot import name 'OfflineModeIsEnabled' from 'huggingface_hub.errors'
optimum = { version = "1.20.0", extras = ["onnxruntime-gpu"], optional = true }
# onnxruntime pinned to <1.18.1 which uses cuDNN 9 until we upgrade torch to 2.4
onnxruntime = { version = "1.18.0", optional = true }
onnxruntime-gpu = { version = "1.18.0", optional = true }
onnx = { version = "^1.16.0", optional = true }
einops = "^0.7.0"
ibm-fms = { version = "^0.0", optional = true }
fms-extras = { git = "https://github.com/foundation-model-stack/fms-extras", rev = "d41f8a34c9841aa3c4c59f17b5e7f3cb365f49de", optional = true }

# Hold back breaking changes from numpy 2.0
numpy = "<2.0"

# Explicitly install some transitive dependencies to avoid CVEs
jinja2 = ">=3.1.4"
aiohttp = ">=3.10.2"
mpmath = ">=1.3.0"
requests = ">=2.31.0"
certifi = ">=2024.2.2"
cryptography = ">=43.0.1"

[tool.poetry.extras]
accelerate = ["accelerate"]
bnb = ["bitsandbytes"]
ibm-fms = ["ibm-fms", "fms-extras"]
onnx = ["optimum", "onnxruntime", "onnx"]
onnx-gpu = ["optimum", "onnxruntime-gpu", "onnx"]
# These are only required if using the quantize cli command
quantize = ["datasets", "texttable"]

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.62.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
