[package]
name = "text-generation-client"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
futures = "^0.3.28"
prost = "^0.12.1"
thiserror = "^1.0.49"
tokio = { version = "1.33.0", features = ["sync"] }
tonic = "^0.10.2"
tower = "^0.4.13"
tracing = "^0.1.37"
tracing-error = "^0.2"

[build-dependencies]
tonic-build = "^0.10.2"
