[package]
name = "text-generation-client"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
futures = "^0.3.30"
prost = "^0.12.3"
thiserror = "^1.0.56"
tokio = { version = "1.35.1", features = ["sync"] }
tonic = "^0.10.2"
tower = "^0.4.13"
tracing = "^0.1.40"
tracing-error = "^0.2.0"

[build-dependencies]
tonic-build = "^0.10.2"
